# PiSigma

./: README.md  pisigma.cabal
src/Language/PiSigma/: Check.hs  Equality.hs  Eval.hs  Lexer.hs  Pretty.hs  Syntax.hs
src/Language/PiSigma/Util/String/: Parser.hs
src/System/Console/Haskeline/: Class.hs
src/Tools/Interpreter/: REPL.hs
