cabal-version: >= 1.6
name:          pisigma
version:       0.2.0.1
license:       BSD3
license-file:  LICENSE
data-files:    examples/*.pi
               emacs-mode/*.el
author:        Thorsten Altenkirch <txa@cs.nott.ac.uk>,
               Andres Loeh <kspisigma@andres-loeh.de>,
               Nils Anders Danielsson <nad@cs.nott.ac.uk>,
               Nicolas Oury <Nicolas.Oury@ed.ac.uk>,
               Darin Morrison <dwm@cs.nott.ac.uk>
maintainer:    Thorsten Altenkirch <txa@cs.nott.ac.uk>,
               Andres Loeh <kspisigma@andres-loeh.de>
synopsis:      A dependently typed core language
description:
  PiSigma is a small dependently typed language with only very few
  constructs: Type:Type, Pi-types, Sigma-types, enumerations and a
  general meachanism for mutual recursion for types and values
  controlled by lifted types. It is intended as a core language for
  dependently typed languages like Agda. It has been described in the
  paper /PiSigma: Dependent Types Without the Sugar/ which has
  appeared in the proceedings of FLOPS 2010.
category:      Development, Language, Dependent Types
build-type:    Simple

flag debug
  description:      Enable debug support
  default:          False

executable pisigma

  build-depends:    array,
                    base,
                    bytestring,
                    haskeline,
                    --haskeline-class,
                    mpppc,
                    mtl,
                    -- see https://stackoverflow.com/a/9228290/216028
                    parsec == 3.0.0,
                    text,
                    utf8-string,
                    containers

  if flag(debug)
    ghc-options:    -Wall --enable-library-profiling -auto -funbox-strict-fields
  else
    ghc-options:    -funbox-strict-fields

  hs-source-dirs:   src

  main-is:          Tools/Interpreter/Main.hs

  other-modules:    Language.PiSigma.Check
                    Language.PiSigma.Equality
                    Language.PiSigma.Evaluate
                    Language.PiSigma.Normalise
                    Language.PiSigma.Lexer
                    Language.PiSigma.Parser
                    Language.PiSigma.Pretty
                    Language.PiSigma.Syntax
                    Language.PiSigma.Util.String.Internal
                    Language.PiSigma.Util.String.Parser
                    Tools.Interpreter.REPL
                    Paths_pisigma
                    Language.PiSigma.Constraints
                    Language.PiSigma.Eval
                    System.Console.Haskeline.Class
